2017.04-183
- Rétablissement partiel des catégories
- Réduction du nombre de publicités sur les torrents X
- Réduction du nombre de publicités pour les abonnés au proxy
- Ajout d'une option de suppression totale de la publicité (achat in-app unique)

2017.04-182
- Passage des TOPs par le Safe Mode (plus lents que via l'API, mais fonctionnels tant que le site l'est également)
- Possibilité de passer le login en cas d'erreur API
- Safe Mode activé par défaut

2017.04-181
- Ajout de contrôles sur la récupération des cookies
- Ajout d'un message en cas d'erreur de l'API (connexion, téléchargement...)
- Ajout d'un bouton de consultation du fichier de log (journal d'utilisation)
- Ajout d'un "Safe Mode" dans les options avancées, permettant un accès dégradé au site en l'absence de réponse de l'API (EXPERIMENTAL)

2017.04-180
- Correction des accès aux torrents X
- Correction de traductions
- Amélioration de la gestion des cookies
- Ajout d'un lien de déclaration de bug dans les paramètres

2017.04-179
- Correction des accès API lors de l'utilisation d'un domaine personnalisé (non recommandé)

2017.04-178
- Optimisation des ressources de l'application
- Réécriture du navigateur interne
- Stockage des Cookies pour des connexions plus rapide (EXPERIMENTAL)
- Correction de crashes en cas de domaine personnalisé (non recommandé)

2017.04-177
- Passage des bookmarks par l'API
- Correction de la récupération du pseudo par l'API
- Les liens dans les news sont rendus cliquables
- Rétablissement des news et du graphique des stats
- Suppression de l'affichage de la classe utilisateur, non fournie par l'API
- Poursuite de la modernisation de l'interface

2017.04-176
- Changement de méthode de téléchargement des torrents pour un moyen plus fiable
- Des erreurs API subsistent, mais relèvent de la compétence de l'équipe du site

2017.03-175
- Passage a t411.ai
- Réduction de la quantité de messages d'informations sur l'état du serveur

2017.03-174